<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/activity_manage_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_imagem_pregress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/URL_ImagemPicasso"
                android:layout_width="match_parent"
                android:scaleType="center"
                android:layout_height="200dp"
                android:src="@color/primary_dark"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </FrameLayout>

        <TextView
            android:id="@+id/title_profile"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignParentTop="true"
            android:text="@string/title_profile"
            android:textColor="#FFA000"
            android:textStyle="bold"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profile"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/signed_out"/>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/provider_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/title_provider"
                android:layout_marginLeft="10dp"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_provider"
                android:textColor="#FFA000"
                android:textStyle="bold"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/provider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:paddingTop="5dp"
                    tools:text="@string/app_name" />

            </android.support.v7.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_recycler"/>

        </LinearLayout>


        <!--
        <LinearLayout
            android:id="@+id/update_profile_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/provider_fields"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/title_update_profile"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_update_profile"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/field_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/field_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_photo"
                android:inputType="textUri"/>

            <Button
                android:id="@+id/update_profile_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_update_profile"
                android:theme="@style/ThemeOverlay.MyDarkButton"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/update_email_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_profile_fields"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/title_update_email"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_update_email"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"/>

            <Button
                android:id="@+id/update_email_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_update_email"
                android:theme="@style/ThemeOverlay.MyDarkButton"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/update_password_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_email_fields"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/title_update_password"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_update_password"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/update_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_update_password"
                android:theme="@style/ThemeOverlay.MyDarkButton"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/send_password_reset_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_password_fields"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/title_send_password_reset"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_send_password_reset"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/field_email_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"/>

            <Button
                android:id="@+id/send_password_reset_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_send_password_reset"
                android:theme="@style/ThemeOverlay.MyDarkButton"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/delete_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/send_password_reset_fields"
            android:orientation="vertical">

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>

            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_delete_user"/>

        </LinearLayout>
        -->

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

<!--
<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
-->